2015-06-30  Youri Hoogstrate
	* Added Pairing object and corresponding tests

2015-06-28  Youri Hoogstrate
	* Added the sparse triangular matrix object ScoringMatrix and
	  corresponding tests

2015-06-23  Youri Hoogstrate
	* Textual changes
	* Fixed two bugs in Settings
	* Added ReadData object files
	* Enabled testing of Settings objects

2015-06-22  Youri Hoogstrate
	* Added Settings object files
	* Added a test to validate parsing the '--help' argument
	* Added a test to validate parsing the '-V' argument
	* Added a test to validate parsing the '-f' argument
	* Changed variable in test/ReadSegments_test.cpp to const
	* Configuration for Travis CI

2015-06-19  Youri Hoogstrate
	* Changed to a more robust definition of the c++11 standard: c++0x

2015-06-04  Youri Hoogstrate
	* Added ScoringTree and tests
	* Added ReadSegments and tests

2015-05-06  Youri Hoogstrate
	* Added SubSequence and made SegmentTree compatible with it rather
	  than the PairingPlus
	* Added DEBUG tests to PairingPlus

2015-05-02  Youri Hoogstrate
	* Added PairingPlus code, test and datetypes.
	* Added SegmentTree and SegmentTree code
	* Dates have changed to 'ISO 8601' representation
	* Added DotBracket code and test
	* Changed some code in Segments.cpp to one-liners
	* Configuration for tests are now compatible with cmake 3.*

2015-05-01  Youri Hoogstrate
	* Added automatic inclusion of git SHA1 into include/config.hpp
	* Added tests for SegmentTree and SegmentTreeElement

2015-04-17  Youri Hoogstrate
	* Added automatic parsing of README.md by running 'make readme'
	* Added automatic parsing of documentation, including latest README
	  by running 'make doc'
	* Added 'make tidy' command to make the code formatted with astyle

2015-04-16  Youri Hoogstrate
	* Added Segment() class + tests

2015-04-15  Youri Hoogstrate
	* Added Sequence() class
	* Added Position
	* Added tests
	* Updated cmake

2015-04-14  Youri Hoogstrate
	* Added two util functions:
	  - min()
	  - file_exists()
