@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get install -qq libboost-filesystem1.55-dev libboost-test1.55-dev
+  - sudo apt-get install -qq libboost-filesystem1.55-dev libboost-test1.55-dev valgrind
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   - cmake .
   - make
