@@ -1,4 +1,5 @@
 2015-06-30  Youri Hoogstrate
+	* Travis CI tests for memory leaks (made ScoringMatrix smaller)
 	* Added Pairing object and corresponding tests
 
 2015-06-28  Youri Hoogstrate
